--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-test-renderer": "^17.0.1",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
