--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "adoptame",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://yourusername.github.io/repository-name",
+  "homepage":"https://dariokozicki.github.io/client-adoptame/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
