--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "adoptame",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://dariokozicki.github.io/client-adoptame/",
+  "homepage": "https://dariokozicki.github.io/client-adoptame/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
@@ -19,7 +19,6 @@
     "primereact": "^5.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-test-renderer": "^17.0.1",
@@ -55,8 +54,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7",
-    "gh-pages": "^3.1.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -64,9 +61,12 @@
     "@types/node": "^14.14.19",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "axios": "^0.21.1",
     "enzyme": "^3.11.0",
+    "gh-pages": "^3.1.0",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primereact": "^5.0.2",
@@ -78,6 +78,7 @@
     "react-test-renderer": "^17.0.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   }
