--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-test-renderer": "^17.0.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
+    "styled-components": "^5.2.3",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
